clusters/oracle-cluster/apps/your-spotify/your-spotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-spotify
  namespace: media
spec:
  selector:
    app: your-spotify
  ports:
    - name: ys-80
      port: 80
      targetPort: 80
    - name: ys-443
      port: 443
      targetPort: 443
