clusters/oracle-cluster/apps/your-spotify/your-spotify/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: your-spotify-ingress
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:Cw3sbXjDVh48LbaqnBkO4wA5vMNXjD6LV3D5gm4=,iv:EteXLE7hTFni5YiuU+Eu3mCtAB1Nl7+b9+SywpDm/0Q=,tag:QEzc/Ykw/AdKEI10oyH5Lw==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:BxlQPmjUKT6NcV0SPdF6w0f7hLSY8vje+42WKb0=,iv:0Ju4wJXCxWa361ZwpMWb5Gi8ZNnIm5LqjX3E7HX12LA=,tag:DZOeh+A+sEflfQ8/GZTWzQ==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: your-spotify-service
                        port:
                            number: 443
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1guzav4sek0x4l3sqx498d34w3z7yy8jact0yav53uza3zrmyf43qcvyza6
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2d1lTUHpPVzZtVTBxa1Nx
[...]
            vj3vOdSiYFrxBZV8MsdPudvZphJfYDV1g8ZwQdoOWZNF2AszYj9A5A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-10-15T09:13:29Z"
    mac: ENC[AES256_GCM,data:8KBkJvkyBQ+H7PWKF+o53TRgxcvN6Ig7Q59OGEDCgjexrFR+H4cuf5whHP9H7Hm/4ZiT4svKIvRQ6kWnqR+jB9KOq+8GgsvqJPPZyk3o4pjGwM2dq6SVRshfSftaQxbWD57qL9ox97es5pYZYXtRNkYAcKHiO55w2l4ZmxUwA6c=,iv:I2hJGkG0goqnD+j4dIMVnT0tOXegC+/cV6lWS2akzU4=,tag:TElQ4xAwXpGRkhjbGjLWOA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalIPs)$
    version: 3.8.1
